--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -3,13 +3,12 @@
 @tailwind utilities;
 
 @layer base {
-    @font-face {
-        font-family: "pacifica";
-        src: url("../public/fonts/Pacifica\ Condensed\ Regular.otf");
-    }
-    @font-face {
-        font-family: "rumor";
-        src: url("../public/fonts/The\ Rumor.ttf");
-    }
-    
+  @font-face {
+    font-family: "pacifica";
+    src: url("/fonts/Pacifica\ Condensed\ Regular.otf");
+  }
+  @font-face {
+    font-family: "rumor";
+    src: url("/fonts/The\ Rumor.ttf");
+  }
 }
