--- a/protfolio/src/index.css
+++ b/protfolio/src/index.css
@@ -2,36 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-.shine {
-  font-size: 3em;
-  margin: 0 auto;
-  margin-bottom: 1em;
-  font-weight: bold;
+#outer #inner {
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  display: inline-block;
+  position: relative;
+
+  -webkit-mask-image: linear-gradient(
+    -75deg,
+    rgba(0, 0, 0, 0.6) 30%,
+    #000 50%,
+    rgba(0, 0, 0, 0.6) 70%
+  );
+  -webkit-mask-size: 200%;
+  animation: shine 2s linear infinite;
 }
 
-.shine {
-  background: "#222 -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat";
-  -webkit-background-size: 150px;
-  color: rgba(255, 255, 255, 0.3);
-  -webkit-background-clip: text;
-  -webkit-animation-name: shine;
-  -webkit-animation-duration: "5s";
-  -webkit-animation-iteration-count: infinite;
-  text-shadow: 0 0px 0px rgba(255, 255, 255, 0.5);
-}
-
-@-webkit-keyframes shine {
-  0%,
-  10% {
-    background-position: -1000px;
+@keyframes shine {
+  from {
+    -webkit-mask-position: 150%;
   }
-  20% {
-    background-position: top left;
-  }
-  90% {
-    background-position: top right;
-  }
-  100% {
-    background-position: 1000px;
+  to {
+    -webkit-mask-position: -50%;
   }
 }
